opam-version: "1.2"
maintainer: "Hezekiah Carty <hez@0ok.org>"
authors: [ "Jérôme Vouillon"
           "Vincent Balat"
           "Nataliya Guts"
           "Pierre Clairambault"
           "Stéphane Glondu"
           "Jérémie Dimino"
           "Warren Harris"
           "Pierre Chambart"
           "Mauricio Fernandez"
           "Grégoire Henri"
           "Gabriel Radanne"
           "Peter Zotov"
           "Hugo Heuzard"
           "Vincent Bernardoff"
           "Romain Slootmaekers"
           "Hezekiah Carty" ]
license: "MIT"
homepage: "https://github.com/hcarty/mwt"
dev-repo: "https://github.com/hcarty/mwt.git"
bug-reports: "https://github.com/hcarty/mwt/issues"
build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name]
build-doc: [ "dune" "build" "@doc" "-p" name]
depends: [
  "base-threads"
  "base-unix"
  "dune" {build}
  "lwt"
]
available: [ ocaml-version >= "4.03.0" ]
